--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
+    "@rneui/themed": "^4.0.0-rc.8",
     "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-auth-session": "~5.0.2",
@@ -33,6 +34,7 @@
     "expo-crypto": "~12.4.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.17",
     "expo-web-browser": "~12.3.2",
     "i18next": "^23.4.6",
     "jest": "^29.2.1",
@@ -50,8 +52,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-vector-icons": "^10.0.0",
-    "expo-updates": "~0.18.17"
+    "react-native-vector-icons": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
