--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "jest-expo": "^49.0.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
+    "react-checkbox-tree": "^1.8.0",
     "react-i18next": "^13.2.2",
     "react-native": "0.72.6",
     "react-native-app-auth": "^6.4.3",
